--- a/Computer Science/collection.ini
+++ b/Computer Science/collection.ini
@@ -72,17 +72,17 @@ ElementsHeight=150
 Day=18
 Item Burden=228.160775322467
 Topic Burden=177.029560151743
-Repetitions=40
-Lapses=3
-Time=0.111415601852059
-RepTime=0.00631288190698898
-Max outstanding=607
-SM16 R=0.880265438678537
-SM17 R=0.823355659847354
-SM16 Metric=0.266203703345811
-SM17 Metric=0.329798807424172
-Recall=0.925
-SM16vSM17 metric cases=40
+Repetitions=72
+Lapses=7
+Time=0.177588877319067
+RepTime=0.0103326967464656
+Max outstanding=631
+SM16 R=0.8827399450396
+SM17 R=0.809411660529971
+SM16 Metric=0.294753797488741
+SM17 Metric=0.352975832326107
+Recall=0.902777777777778
+SM16vSM17 metric cases=72
 [Navigation]
 Synchronize Element with Contents=0
 Auto-Scroll Contents=0
