--- a/Computer Science/collection.ini
+++ b/Computer Science/collection.ini
@@ -1,6 +1,6 @@
 [Learning]
-Outstanding day=30
-Last Auto-postpone=30
+Outstanding day=32
+Last Auto-postpone=32
 Sound Mode=0
 Success Sound=0
 Failure Sound=0
@@ -20,7 +20,7 @@ Topic Sorting=12
 Topic Proportion=5
 Auto-sort=1
 Auto-postpone=1
-Last Auto-sort=30
+Last Auto-sort=32
 [Window]
 Contents=[78,78,960,481,0]
 Text Input=[323,242,647,296,0]
@@ -70,20 +70,20 @@ Maximized=0
 MembersWidth=307
 ElementsHeight=150
 [Stats]
-Day=30
-Item Burden=235.817463488085
-Topic Burden=126.444692153134
-Repetitions=243
-Lapses=41
-Time=0.119749189812864
-RepTime=0.0313276388729315
-Max outstanding=948
-SM16 R=0.881512165893515
-SM17 R=0.822775443552132
-SM16 Metric=0.372885775001485
-SM17 Metric=0.423086083334692
-Recall=0.831275720164609
-SM16vSM17 metric cases=243
+Day=32
+Item Burden=235.648308536271
+Topic Burden=112.744251791039
+Repetitions=0
+Lapses=0
+Time=0.000348518515238538
+RepTime=0
+Max outstanding=1036
+SM16 R=0.9
+SM17 R=0.9
+SM16 Metric=0
+SM17 Metric=0
+Recall=0.9
+SM16vSM17 metric cases=0
 [Navigation]
 Synchronize Element with Contents=0
 Auto-Scroll Contents=0
